Pagination
- Implemented users' application pagination and filtering
